--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.shadowPurple {
+    box-shadow: 120px -90px 300px 100px #5821ff;
+  }
+
+  
